# adventuretales

./: .gitignore  .gitmodules  CMakeLists.txt  compile_emscripten.bat  index.html.mem  index.js
about/: About.txt  Class Structure.txt  Readme.txt
data/maps/: map1_background.csv  map1_colliders.csv  map1_foreground.csv  map2_colliders.csv  map2_foreground.csv  map3_colliders.csv  map3_foreground.csv  map99.csv  readme.txt
data/sprites/: AdventureTales_tileset.tsx
dll/: Readme.txt
include/: main.cpp  main_js.cpp
include/characters/: Archer.cpp  Character.cpp  Character.h  Inventory.cpp  Inventory.h  Traits.cpp  Traits.h  Viking.cpp
include/characters/inc/: Archer.h  Character.h  Inventory.h  Traits.h  Viking.h
include/characters/src/: Archer.cpp  Character.cpp  Inventory.cpp  Traits.cpp  Viking.cpp
include/core/: AdventureTales.cpp  AdventureTales.h  DialogueGenerator.cpp  DialogueGenerator.h  GameController.cpp  GameController.h  GameEngine.cpp  GameEngine.h  GameRenderer.cpp  GameRenderer.h  InputHandler.cpp  InputHandler.h  MapHandler.cpp  MapHandler.h  PlayerData.cpp  PlayerData.h  RandomGenerator.cpp  RandomGenerator.h  Resources.cpp  Resources.h
include/core/inc/: AdventureTales.h  DialogueGenerator.h  GameController.h  GameEngine.h  GameRenderer.h  Globals.h  InputHandler.h  MapHandler.h  PlayerData.h  Resources.h  sdl_deleter.h
include/core/src/: AdventureTales.cpp  DialogueGenerator.cpp  GameController.cpp  GameEngine.cpp  GameRenderer.cpp  InputHandler.cpp  MapHandler.cpp  PlayerData.cpp  RandomGenerator.cpp  Resources.cpp
include/enemies/inc/: Enemy.h
include/enemies/src/: Enemy.cpp
include/items/: Armor.cpp  Item.cpp  Item.h  Potion.cpp  Scroll.cpp  Scroll.h  Weapon.cpp
include/items/inc/: Armor.h  Item.h  Potion.h  Weapon.h
include/items/src/: Armor.cpp  Item.cpp  Potion.cpp  Scroll.cpp  Weapon.cpp
include/menu/: InteractionMenu.cpp  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuBattle.cpp  MenuBattle.h  MenuWorld.cpp  MenuWorld.h
include/menu/inc/: InteractionMenu.h  MainMenu.h  Menu.h  MenuBattle.h  MenuWorld.h
include/menu/src/: InteractionMenu.cpp  MainMenu.cpp  Menu.cpp  MenuBattle.cpp  MenuWorld.cpp
include/textures/: Text.cpp  Text.h  Texture.cpp  Texture.h
include/textures/inc/: Text.h  Texture.h
include/textures/src/: Text.cpp  Texture.cpp
include/world/: Camera.cpp  Camera.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  MovingObject.cpp  NPC.cpp  NPC.h  Object.cpp  Object.h  Player.cpp  Player.h
include/world/inc/: Camera.h  MovingObject.h  NPC.h  Object.h
include/world/src/: Camera.cpp  Door.cpp  MovingObject.cpp  NPC.cpp  Object.cpp  Player.cpp
